--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				</div>
 				<div class="info-panel-right bottom">
 					<div class="info-panel-padding">
-						<p>Illustration of Japanese fishing boat from a trip around the Izu peninsula in June 2015.</p>
+						<p>Illustration of a Japanese fishing boat from a trip around the Izu peninsula in June 2015.</p>
 						<p><a href="http://drbl.in/oVCa">Small animated version of the boat on Dribbble</a></p>
 					</div>
 				</div>
