--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				
 					</div>
 				<div class="contact-overlay-right">
-					<form>
+					<form action="//formspree.io/alistair@digitalpath.com" method="post">
 			      		<div class="info-title">
 							<div class="info-panel-padding">
 								<h2>Get in touch</h2>
