--- a/auction-annuity/index.html
+++ b/auction-annuity/index.html
@@ -11,13 +11,23 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
         <header>
 	        <div class="section-padding">
 		        <div class="col-2">
-		        	Header
+		        	<div class="side-padding">
+						<img class="logo" src="img/logo.png">
+		        	</div>
+		        </div>
+		        <div class="col-2">
+			        <div class="side-padding">
+		        	<div class="register-scroll button">
+			        	Register your interest
+		        	</div>
+			        </div>
 		        </div>
 		    </div>
 		</header>
@@ -97,46 +107,67 @@
 		
 		<section id="stages">
 	        <div class="section-padding">
-		        <div class="col-1">
+		        <div class="col-1 stages">
 			        <div class="side-padding">
-				    	<h2>This is how we think it would work...</h2>
+				    	<h2 class="center-text">This is how we think it would work...</h2>
 				    	<ol>
 					    	<li>
-					    		<h3>Enter your details</h3>
-					    		<p>Firstly, you would need you to complete your personal information and give us any detail relating to the annuity you wish to sell. We would the need you to complete the medical history and lifestyle information for both yourself and any dependant who would receive an income from the annuity after your death. At this point, we would outline to you the expected costs associated with selling your annuity.</p>
+					    		<div class="padding">
+						    		<h3>Enter your details</h3>
+						    		<p class="align-left">Firstly, you would need you to complete your personal information and give us any detail relating to the annuity you wish to sell. We would the need you to complete the medical history and lifestyle information for both yourself and any dependant who would receive an income from the annuity after your death. At this point, we would outline to you the expected costs associated with selling your annuity.</p>
+					    		</div>
+					    		<div class="arrow-down-mask">
+						    		<div class="arrow-down"></div>
+					    		</div>
+					    	</li>
+					    	<li class="second-bg">
+					    		<div class="padding">
+						    		<h3>Personalised illustration</h3>
+						    		<p class="align-left">Next we would provide you with a Personalised Illustration (non-guaranteed) to show how much you might receive. This would be non-binding and based only on the information you entered. We would then provide a comparison illustration showing the cost of buying a new annuity to replace your income on the open market.</p>
+					    		</div>
+							</li>
+						    <li>
+						    	<div class="padding">
+						    		<h3>Confirm your identity</h3>
+						    		<p class="align-left">If you wish to proceed, and get a binding offer from the buyers on our panel, we would then carry out an ID check to confirm your identity. We would also check with your provider to confirm the full details of your annuity and to ensure they allow it to be sold (re-assigned).</p>
+						    	</div>
+					    	</li>
+					    	<li class="second-bg">
+					    		<div class="padding">
+						    		<h3>Listing fee</h3>
+						    		<p class="align-left">You would then be charged a listing fee to cover some of the costs of medical interview we would need to conduct and also to cover the costs of administering the annuity auction.</p>
+					    		</div>
 					    	</li>
 					    	<li>
-					    		<h3>Personalised illustration</h3>
-					    		<p>Next we would provide you with a Personalised Illustration (non-guaranteed) to show how much you might receive. This would be non-binding and based only on the information you entered. We would then provide a comparison illustration showing the cost of buying a new annuity to replace your income on the open market.</p>
+					    		<div class="padding">
+						    		<h3>Your medical</h3>
+						    		<p class="align-left">You (and any dependants on your annuity) would then be interviewed on the telephone by a nurse to assess your health and perform an assessment of your vulnerability, a General Practitioner's Report (GPR) may also be requested from your doctor. We anticipate this process would take between two and four weeks but it may take longer.</p>
+					    		</div>
+					    	</li>
+					    	<li class="second-bg">
+					    		<div class="padding">
+						    		<h3>Potential buyers advised</h3>
+						    		<p class="align-left">The confirmed medical details and annuity policy details would then be sent to each potential buyer in the market, so they can make an offer if they wish.</p>
+					    		</div>
 					    	</li>
 					    	<li>
-					    		<h3>Confirm your identity</h3>
-					    		<p>If you wish to proceed, and get a binding offer from the buyers on our panel, we would then carry out an ID check to confirm your identity. We would also check with your provider to confirm the full details of your annuity and to ensure they allow it to be sold (re-assigned).</p>
+					    		<div class="padding">
+						    		<h3>Your annuity auction</h3>
+						    		<p class="align-left">Your annuity auction would then remain live for 7 days, during which period buyers can make their offers. At the end of this period you would then be able to review any offers made and choose if you would like to proceed with one of them.</p>
+					    		</div>
 					    	</li>
-					    	<li>
-					    		<h3>Listing fee</h3>
-					    		<p>You would then be charged a listing fee to cover some of the costs of medical interview we would need to conduct and also to cover the costs of administering the annuity auction.</p>
-					    	</li>
-					    	<li>
-					    		<h3>Your medical</h3>
-					    		<p>You (and any dependants on your annuity) would then be interviewed on the telephone by a nurse to assess your health and perform an assessment of your vulnerability, a General Practitioner's Report (GPR) may also be requested from your doctor. We anticipate this process would take between two and four weeks but it may take longer.</p>
-					    	</li>
-					    	<li>
-					    		<h3>Potential buyers advised</h3>
-					    		<p>The confirmed medical details and annuity policy details would then be sent to each potential buyer in the market, so they can make an offer if they wish.</p>
-					    	</li>
-					    	<li>
-					    		<h3>Your annuity auction</h3>
-					    		<p>Your annuity auction would then remain live for 7 days, during which period buyers can make their offers. At the end of this period you would then be able to review any offers made and choose if you would like to proceed with one of them.</p>
-					    	</li>
-					    	<li>
-					    		<h3>Sign the paperwork</h3>
-					    		<p>If you wish to proceed, we would then notify your chosen buyer that you wish to proceed. You would then need to sign and return some paper work. NOTE: If your annuity is above a certain level you may need to confirm and prove that you have received advice from a qualified financial adviser. If this has not been done, you would then need to arrange for such advice before you can proceed.</p>
+					    	<li class="second-bg">
+					    		<div class="padding">
+					    			<h3>Sign the paperwork</h3>
+						    		<p class="align-left">If you wish to proceed, we would then notify your chosen buyer that you wish to proceed. You would then need to sign and return some paper work. NOTE: If your annuity is above a certain level you may need to confirm and prove that you have received advice from a qualified financial adviser. If this has not been done, you would then need to arrange for such advice before you can proceed.</p>
+					    		</div>
 					    	</li>
 							<li>
-					    		<h3>Confirm you wish to sell</h3>
-					    		<p>Once you confirm your wish to sell, you would then enter a 14 day cooling off period during which time the process would pause to allow you time to re-consider this important decision. During this period, you have the mandatory right to change your mind. After this period, the buyer would then make arrangements with the assigning annuity provider to transfer the annuity income to them. Once this has happened the buyer would pay you your cash lump sum. NOTE: The cash lump sum would be subject to income tax at your marginal rate. The tax would be deducted by the buyer prior to you receiving the money, in the same way as currently occurs with your annuity income. You may have further tax liability dependent on your personal taxable income position.</p>
-					    	</li>
+								<div class="padding">
+						    		<h3>Confirm you wish to sell</h3>
+						    		<p class="align-left">Once you confirm your wish to sell, you would then enter a 14 day cooling off period during which time the process would pause to allow you time to re-consider this important decision. During this period, you have the mandatory right to change your mind. After this period, the buyer would then make arrangements with the assigning annuity provider to transfer the annuity income to them. Once this has happened the buyer would pay you your cash lump sum. NOTE: The cash lump sum would be subject to income tax at your marginal rate. The tax would be deducted by the buyer prior to you receiving the money, in the same way as currently occurs with your annuity income. You may have further tax liability dependent on your personal taxable income position.</p>
+								</div>
+							</li>
 				    	</ol>
 					</div>
 		        </div>
@@ -181,8 +212,8 @@
 		    <section>    
 		        <div class="section-padding copyright">
 			        <div class="col-1">
-				        <p>© AuctionMyAnnuity. All rights reserved.</p>
-					</div>
+				        <p>© AuctionMyAnnuity. All rights reserved. <span id="back-to-top">Back to top<i class="arrow up"></i></span></p>
+				    </div>
 		        </div>
 		    </section>
 	        
