--- a/auction-annuity/index.html
+++ b/auction-annuity/index.html
@@ -11,6 +11,9 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <!--[if lte IE 8]>
+			 <link rel="stylesheet" href="css/ie.css">
+		<![endif]-->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
