--- a/auction-annuity/index.html
+++ b/auction-annuity/index.html
@@ -27,7 +27,7 @@
 		        </div>
 		        <div class="col-2">
 			        <div class="side-padding">
-		        	<div class="register-scroll button">
+		        	<div class="register-scroll button desktop-only">
 			        	Register your interest
 		        	</div>
 			        </div>
@@ -40,6 +40,9 @@
 		        <div class="col-1">
 			        <div class="side-padding">
 				        <h1>AuctionMyAnnuity is looking to develop a service for annuity holders to compare offers from several providers and sell their annuity to the highest bidder for a cash lump sum.</h1>
+				        <div class="register-scroll button mobile-only">
+				        	Register your interest
+			        	</div>
 			        </div>
 		        </div>
 	        </div>
@@ -128,17 +131,26 @@
 						    		<h3>Personalised illustration</h3>
 						    		<p class="align-left">Next we would provide you with a Personalised Illustration (non-guaranteed) to show how much you might receive. This would be non-binding and based only on the information you entered. We would then provide a comparison illustration showing the cost of buying a new annuity to replace your income on the open market.</p>
 					    		</div>
+					    		<div class="arrow-down-mask">
+						    		<div class="arrow-down colour-2"></div>
+					    		</div>
 							</li>
 						    <li>
 						    	<div class="padding">
 						    		<h3>Confirm your identity</h3>
 						    		<p class="align-left">If you wish to proceed, and get a binding offer from the buyers on our panel, we would then carry out an ID check to confirm your identity. We would also check with your provider to confirm the full details of your annuity and to ensure they allow it to be sold (re-assigned).</p>
 						    	</div>
+						    	<div class="arrow-down-mask">
+						    		<div class="arrow-down"></div>
+					    		</div>
 					    	</li>
 					    	<li class="second-bg">
 					    		<div class="padding">
 						    		<h3>Listing fee</h3>
 						    		<p class="align-left">You would then be charged a listing fee to cover some of the costs of medical interview we would need to conduct and also to cover the costs of administering the annuity auction.</p>
+					    		</div>
+					    		<div class="arrow-down-mask">
+						    		<div class="arrow-down colour-2"></div>
 					    		</div>
 					    	</li>
 					    	<li>
@@ -146,11 +158,17 @@
 						    		<h3>Your medical</h3>
 						    		<p class="align-left">You (and any dependants on your annuity) would then be interviewed on the telephone by a nurse to assess your health and perform an assessment of your vulnerability, a General Practitioner's Report (GPR) may also be requested from your doctor. We anticipate this process would take between two and four weeks but it may take longer.</p>
 					    		</div>
+					    		<div class="arrow-down-mask">
+						    		<div class="arrow-down"></div>
+					    		</div>
 					    	</li>
 					    	<li class="second-bg">
 					    		<div class="padding">
 						    		<h3>Potential buyers advised</h3>
 						    		<p class="align-left">The confirmed medical details and annuity policy details would then be sent to each potential buyer in the market, so they can make an offer if they wish.</p>
+					    		</div>
+					    		<div class="arrow-down-mask">
+						    		<div class="arrow-down colour-2"></div>
 					    		</div>
 					    	</li>
 					    	<li>
@@ -158,11 +176,17 @@
 						    		<h3>Your annuity auction</h3>
 						    		<p class="align-left">Your annuity auction would then remain live for 7 days, during which period buyers can make their offers. At the end of this period you would then be able to review any offers made and choose if you would like to proceed with one of them.</p>
 					    		</div>
+					    		<div class="arrow-down-mask">
+						    		<div class="arrow-down"></div>
+					    		</div>
 					    	</li>
 					    	<li class="second-bg">
 					    		<div class="padding">
 					    			<h3>Sign the paperwork</h3>
 						    		<p class="align-left">If you wish to proceed, we would then notify your chosen buyer that you wish to proceed. You would then need to sign and return some paper work. NOTE: If your annuity is above a certain level you may need to confirm and prove that you have received advice from a qualified financial adviser. If this has not been done, you would then need to arrange for such advice before you can proceed.</p>
+					    		</div>
+					    		<div class="arrow-down-mask">
+						    		<div class="arrow-down colour-2"></div>
 					    		</div>
 					    	</li>
 							<li>
