--- a/auction-annuity/index.html
+++ b/auction-annuity/index.html
@@ -39,29 +39,41 @@
 	        <div class="section-padding">
 		        <div class="col-1">
 			        <div class="side-padding">
-				        <h1>AuctionMyAnnuity is looking to develop a service for annuity holders to compare offers from several providers and sell their annuity to the highest bidder for a cash lump sum.</h1>
+				        <div class="copy">
+					        <h1>AuctionMyAnnuity is looking to develop a service for annuity holders to compare offers from several providers and sell their annuity to the highest bidder for a cash lump sum.</h1>
+				        </div>
 				        <div class="register-scroll button mobile-only">
 				        	Register your interest
 			        	</div>
+			        	
 			        </div>
 		        </div>
 	        </div>
-		</section>
+	        <div class="col-2">
+		         <div class="intro-shape-left"></div>
+	        </div>
+	        <div class="col-2">
+		        <div class="intro-shape-right"></div>
+	        </div>
+	    </section>
 		
 		<section id="explanation">
 	        <div class="section-padding">
 		        <div class="col-3">
 			        <div class="side-padding">
+				        <img src="img/illustrations-1.png" alt="illustration">
 				        <h2>In the 2015 pre-election budget the government announced a consultation on allowing holders of annuities to sell their annuity income to release the value. This has become known as the Secondary Annuity Market and is expected to begin in 2017.</h2>
 			        </div>
 		        </div>
 		        <div class="col-3">
 			        <div class="side-padding">
+				        <img src="img/illustrations-2.png" alt="illustration">
 				        <h2>AuctionMyAnnuity is working with both annuity providers and advisers to build a service that should help customers obtain the best offer for the sale of their annuity income. Rules relating to this market are yet to be confirmed by the FCA but are expected in 2017.</h2>
 			        </div>
 		        </div>
 		        <div class="col-3">
 			        <div class="side-padding">
+				        <img src="img/illustrations-3.png" alt="illustration">
 				        <h2>AuctionMyAnnuity's proposal will be a service available for use either directly by annuity holders who are receiving a pension income, or by an adviser/family member on their behalf. The service should allow for comparison of offers and sale of the annuity to the highest bidder.</h2>
 			        </div>
 		        </div>
@@ -115,7 +127,7 @@
 	        <div class="section-padding">
 		        <div class="col-1 stages">
 			        <div class="side-padding">
-				    	<h2 class="center-text">This is how we think it would work...</h2>
+				    	<h1 class="stages-header">This is how we think it would work...</h2>
 				    	<ol>
 					    	<li>
 					    		<div class="padding">
@@ -236,7 +248,7 @@
 			    </div>
 	        </section>
 		        
-		    <section>    
+		    <section class="footer-2">    
 		        <div class="section-padding copyright">
 			        <div class="col-1">
 				        <p>© AuctionMyAnnuity. All rights reserved. <span id="back-to-top">Back to top<i class="arrow up"></i></span></p>
