--- a/wc-dev/index.html
+++ b/wc-dev/index.html
@@ -102,16 +102,39 @@
 	        <div class="content">
 		        <div class="col-50">
 			        <div class="padding hero-copy-padding-left">
-				        <p>We offer Coaching, Training, Consultancy and Challenge sessions for top level management, and those who report to them. We have 17 years’ experience of running programmes and coaching / workshops to a wide variety of organisations in the public, private and voluntary sectors both in the UK and internationally to make doing their jobs easier, more effective, more efficient and more enjoyable.</p>
+				        <p>Coaching, Training and Consultancy for top level management, and those who report to them. I have 17 years’ experience of running programmes and coaching/workshops to a wide variety of organisations in the public, private and voluntary sectors both in the UK and internationally to make doing their jobs easier, more effective, more efficient and more enjoyable.</p>
+				        <ul>
+					        <li>Improving the quality of strategic planning</li>
+					        <li>Enabling better-quality decision making and problem solving</li>
+					        <li>Getting things done more efficiently</li>
+					        <li>Being able to communicate quickly, succinctly and with impact</li>
+					        <li>Building confidence</li>
+				        </ul>
+				        <p>I can work with you or your organisation on a temporary, short-term basis or in a longer relationship, to help you develop your strategic thinking, policy work or report-writing skills. I offer tailor-made workshops and training courses, one-to-one coaching, and consultancy services. Please feel free to contact me to discuss your specific needs.</p>
 				        
 			        </div>
 		        </div>
 		        <div class="col-50">
 			        <div class="padding hero-copy-padding-right">
+				        <p>Some of those I’ve helped</p>
 				        <ul>
-					        <li>Improving the quality of strategic planning</li>
-					        <li>Improving the quality of strategic planning</li>
-					        <li>Improving the quality of strategic planning</li>
+					        <li>The Council of the European Union: training Political Advisers in the General Secretariat on Political Thinking, Writing Effective Political Briefings and Delivering Oral Briefing;</li>
+					        <li>Capita: A consultancy project, helping a team in the UK Government conduct research to develop a new policy and set out options for ministerial decision.</li>
+					        <li>European Space Agency: A programme on Writing to Persuade for top management and rocket scientists;</li>
+					        <li>Association of Chartered and Certified Accountants (ACCA): In-house strategy workshops for the international Policy Team;</li>
+					        <li>Air Safety Support International: A workshop for top management on communications strategy;</li>
+					        <li>Government of Uganda: consultancy to the top-level civil servants on communications strategy and governance;</li>
+					        <li>Foreign and Commonwealth Office: a global programme for the UK Diplomatic Service on International Policy Skills and strategy;
+</li>
+					        <li>Former Yugoslav Republic of Macedonia: a workshop for Chief Executives of voluntary sector and social enterprise organisations on Influencing Government;</li>
+					        <li>Kings College London: Training on Written and Oral Briefing Skills for senior academics and staff in the international team
+</li>
+					        <li>DBRS: Workshops on Writing For Impact for senior financial writers in a global credit ratings agency;</li>
+					        <li>Avon and Somerset Police: A series of workshops for senior police officers and support staff to help them brief their Police and Crime Commissioner more effectively.</li>
+					        <li>Sheffield Fire and Rescue Service: Workshops for senior officers on effective briefing skills.</li>
+					        <li>University of Essex: A programme on how to make the University’s partnerships and relationships work better.
+</li>
+					        <li>The Royal Society: A tailored workshop for the science policy team on improving meeting and note-taking skills.</li>
 				        </ul>
 				        
 			        </div>
