--- a/wc-dev/index.html
+++ b/wc-dev/index.html
@@ -145,20 +145,20 @@
 	        <div class="content">
 		        <div class="col-33">
 			        <div class="padding">
-			        	<h2>Title</h2>
-			        	<p>Copy goes here</p>
+			        	<h2>Policy and strategic planning</h2>
+			        	<p>Link copy goes here</p>
 			        </div>
 		        </div>
 		        <div class="col-33">
 			        <div class="padding">
-			        	 <h2>Title</h2>
-			        	<p>Copy goes here</p>
+			        	 <h2>Communication skills</h2>
+			        	<p>Link copy goes here</p>
 			        </div>
 		        </div>
 		        <div class="col-33">
 			        <div class="padding">
-			        	<h2>Title</h2>
-			        	<p>Copy goes here</p>
+			        	<h2>Consultancy</h2>
+			        	<p>Link copy goes here</p>
 			        </div>
 		        </div>
 		        
