--- a/wc-dev/blog.html
+++ b/wc-dev/blog.html
@@ -35,7 +35,7 @@
 				
 				<menu class="mobile-hide">
 		    		<ul>
-			    		<li class=""><a href="/">Home</a></li>
+			    		<li class=""><a href="./">Home</a></li>
 			    		<li class="sub-menu-parent">
 			    			<div class="sub-menu-button">Services</div>
 			    			<div class="sub-menu-container">
