--- a/hhg-websites.html
+++ b/hhg-websites.html
@@ -60,7 +60,7 @@
 				</div>
 				<div class="info-panel-right bottom">
 					<div class="info-panel-padding">
-						<p>Seven websites for the Hakuba Hotel Group. Responsive layout design and coding with backend CMS system.</p><p><a href="http://hakubahotelgroup.com">Main group site</a></p>
+						<p>Seven websites for the Hakuba Hotel Group. Responsive layout design and coding with backend CMS system.</p>
 					</div>
 				</div>
 			</div>
