--- a/wc-dev/about.html
+++ b/wc-dev/about.html
@@ -40,8 +40,8 @@
 			    			<div class="sub-menu-button">Services</div>
 			    			<div class="sub-menu-container">
 				    			<ul class="sub-menu">
-					    			<li class=""><a href="training.html">Training</a></li>
-					    			<li class=""><a href="coaching.html">Coaching</a></li>
+					    			<li class=""><a href="planning.html">Planning</a></li>
+					    			<li class=""><a href="communication.html">Communication</a></li>
 					    			<li class=""><a href="consultancy.html">Consultancy</a></li>
 					    		</ul>
 			    			</div>
@@ -74,11 +74,12 @@
 			        <div class="padding">
 			        	<h1><span>Zoë Collier <span style="font-size: 50%;">MA(Cantab)</span></h1>
 			        	<h2>An inspirational top-management development coach and trainer</h2>
-			        	<p>I have a reputation as a fantastic educator, development coach and trainer. Engaging, charismatic and energetic, I throw myself into communicating in a way that inspires, educates, entertains and motivates. Some subjects can seem quite “dry” (and for some people, even a bit boring). I am passionate about the subjects I teach and inspire others to feel the same way.</p> 
-<p>I use everyday examples and experiences to bring theory to life and ensure that it is accessible to everyone.  I make sure that the training is enjoyable by bringing humour and my own real-life stories to illustrate and inspire. A natural leader with a wealth of experience working across sectors and across the world, I get consistently great feedback from people who attend my events.</p>
-<p>I know that people learn best from trying things out, in a very practical way, and my courses are a blend of guidance, group discussion and lots of practical exercises. I am hugely empathetic and love nothing more than helping people develop their skills and self-confidence.
-Outside my work, I love doing codewords, sudoku and other mind games, making things (sock animals are my latest hobby) and looking out for the next rescue dog to complete our household.
-</p>
+			        	<p>I have a reputation as a fantastic educator, development coach and trainer. Engaging, charismatic and energetic, I throw myself into communicating in a way that inspires, educates, entertains and motivates. I am passionate about the subjects I teach and inspire others to feel the same way.</p>
+						<p>I use everyday examples and experiences to bring theory to life and ensure that it is accessible to everyone.  I make sure that the training is enjoyable by bringing humour and my own real-life stories to illustrate and inspire. A natural leader with a wealth of experience working across sectors and across the world, I get consistently great feedback from people who attend my events.</p>
+						<p>I know that people learn best from trying things out, in a very practical way, and my courses are a blend of guidance, group discussion and lots of practical exercises. I am hugely empathetic and love nothing more than helping people develop their skills and self-confidence.</p>
+						<p>My experience from working in the civil service, local government and the private and voluntary sectors enables me to understand the demands on people in all these areas and give advice and ideas based on “what works”.</p>
+						<p>Outside my work, I love doing codewords, sudoku and other mind games, making things (sock animals are my latest hobby), going to vintage car rallies with my beautiful Nissan Figaro, and looking out for the next rescue dog to complete our household.
+						</p>
 			        	
 			        </div>
 		        </div>
