--- a/wc-dev/communication.html
+++ b/wc-dev/communication.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Windmill Consulting Ltd - Consultancy</title>
+        <title>Windmill Consulting Ltd - Communication</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -41,8 +41,8 @@
 			    			<div class="sub-menu-container">
 				    			<ul class="sub-menu">
 					    			<li class=""><a href="planning.html">Planning</a></li>
-					    			<li class=""><a href="communication.html">Communication</a></li>
-					    			<li class="active"><a href="consultancy.html">Consultancy</a></li>
+					    			<li class="active"><a href="communication.html">Communication</a></li>
+					    			<li class=""><a href="consultancy.html">Consultancy</a></li>
 					    		</ul>
 			    			</div>
 						</li>
@@ -72,16 +72,30 @@
 	        <div class="content">
 		        <div class="col-66">
 			        <div class="padding">
-			        	<h1><span>Consultancy</span></h1>
-			        	<h2>Sometimes it helps to have an external expert to look at what your team is doing.</h2>
-			        	<p>They can ask the hard questions and offer ideas, based on a clear view of “what works” and an armoury of strategic tools to help you make progress and have maximum influence and impact. I can offer one-off consultancy, one-to-one coaching, or make a regular contribution to your team’s development and achievements.
-</p>
-			        	<h2>Some of those I have helped:
-</h2>
-						<ul class="client">
-							<li>Capita: A consultancy project, helping a team in the UK Government conduct research to develop a new policy and set out options for ministerial decision;</li>
-						<li>Government of Uganda: consultancy to the top-level civil servants on communications strategy and governance.</li>
-						</ul>
+			        	<h1><span>Communication skills</span></h1>
+			        	<h2>Many people find writing reports for senior management, management boards, local government etc challenging.</h2>
+			        	<p>They write too much, go into far too much technical detail, are too subjective and/or use language that is too specialist and complicated. I can show you how to plan your structure and content and write in a clear, simple, impactful way.</p>
+			        	<ul class="tall-bottom-margin">
+				        	<li>Written briefing</li>
+				        	<li>Report writing</li>
+				        	<li>Presentations</li>
+				        	<li>Writing to persuade</li>
+				        	<li>Minutes of meetings</li>
+				        </ul>
+				        
+				        <h2>Some of those I have helped:</h2>
+				        <ul class="client">
+				        	<li>The Council of the European Union: training Political Advisers in the General Secretariat on Political Thinking, Writing Effective Political Briefings and Delivering Oral Briefing;</li>
+				        	<li>European Space Agency: A programme on Writing to Persuade for top management and rocket scientists;
+</li>
+				        	<li>Air Safety Support International: A workshop for top management on communications strategy;</li>
+				        	<li>Kings College London: Training on Written and Oral Briefing Skills for senior academics and staff in the international team;
+</li>
+				        	<li>DBRS: Workshops on Writing For Impact for senior financial writers in a global credit ratings agency;</li>
+				        	<li>Avon and Somerset Police: A series of workshops for senior police officers and support staff to help them brief their Police and Crime Commissioner more effectively;</li>
+				        	<li>Sheffield Fire and Rescue Service: Workshops for senior officers on effective briefing skills;</li>
+				        	<li>The Royal Society: A tailored workshop for the science policy team on improving meeting and note-taking skills.</li>
+				        </ul>
 			        </div>
 		        </div>
 		        <div class="col-33">
