--- a/wc-dev/planning.html
+++ b/wc-dev/planning.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Windmill Consulting Ltd - Consultancy</title>
+        <title>Windmill Consulting Ltd - Planning</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -40,9 +40,9 @@
 			    			<div class="sub-menu-button">Services</div>
 			    			<div class="sub-menu-container">
 				    			<ul class="sub-menu">
-					    			<li class=""><a href="planning.html">Planning</a></li>
+					    			<li class="active"><a href="planning.html">Planning</a></li>
 					    			<li class=""><a href="communication.html">Communication</a></li>
-					    			<li class="active"><a href="consultancy.html">Consultancy</a></li>
+					    			<li class=""><a href="consultancy.html">Consultancy</a></li>
 					    		</ul>
 			    			</div>
 						</li>
@@ -72,16 +72,23 @@
 	        <div class="content">
 		        <div class="col-66">
 			        <div class="padding">
-			        	<h1><span>Consultancy</span></h1>
-			        	<h2>Sometimes it helps to have an external expert to look at what your team is doing.</h2>
-			        	<p>They can ask the hard questions and offer ideas, based on a clear view of “what works” and an armoury of strategic tools to help you make progress and have maximum influence and impact. I can offer one-off consultancy, one-to-one coaching, or make a regular contribution to your team’s development and achievements.
-</p>
-			        	<h2>Some of those I have helped:
-</h2>
-						<ul class="client">
-							<li>Capita: A consultancy project, helping a team in the UK Government conduct research to develop a new policy and set out options for ministerial decision;</li>
-						<li>Government of Uganda: consultancy to the top-level civil servants on communications strategy and governance.</li>
-						</ul>
+			        	<h1><span>Policy and Strategic Planning</span></h1>
+			        	<h2>What makes an organisation work at its best?</h2>
+			        	<p>The key is to get complete alignment between the vision set by the top people and the daily work done by the rest of the organisation. I can help with both ends of this spectrum and provide tools for delivering strategic goals in a structured, creative and inclusive way.</p>
+			        	<ul class="tall-bottom-margin">
+				        	<li>Strategy and goal-setting</li>
+				        	<li>Problem solving</li>
+				        	<li>Policy development</li>
+				        	<li>Stakeholder engagement</li>
+			        	</ul>
+			        	<h2>Some of those I have helped:</h2>
+			        	<ul class="client">
+				        	<li>Association of Chartered and Certified Accountants (ACCA): In-house strategy workshops for the international Policy Team;</li>
+				        	<li>Foreign and Commonwealth Office: A global programme for the UK Diplomatic Service on International Policy Skills and strategy;</li>
+				        	<li>University of Essex: A programme on how to make the University’s partnerships and relationships work better;</li>
+				        	<li>Ministry of Foreign Affairs, Sierra Leone: Intensive training for directors and senior diplomats on strategic planning and policy development skills.</li>
+				        	<li>Former Yugoslav Republic of Macedonia: A workshop for Chief Executives of voluntary sector and social enterprise organisations on Influencing Government;</li>
+			        	</ul>
 			        </div>
 		        </div>
 		        <div class="col-33">
