--- a/wc-dev/about.html
+++ b/wc-dev/about.html
@@ -108,7 +108,7 @@
 		        <div class="col-33">
 			        <div class="padding">
 			        Managing Director<br>
-			        Zoe McNeill-Ritchie<br>
+			        Zoë Collier<br>
 			        Telephone 07930 313007<br>
 			        <a href="mailto:zoe@windmillconsulting.co.uk">Contact by Email</a>
 			        </div>
