--- a/wc-dev/index.html
+++ b/wc-dev/index.html
@@ -122,8 +122,8 @@
 			        <div class="padding">
 				        <h2>The benefits</h2>
 				        <ul>
-					        <li>Improving the quality of strategic planning</li>
-							<li>Enabling better-quality decision making and problem solving</li>
+					        <li>Improved strategic planning</li>
+							<li>Better-quality decision making and problem solving</li>
 							<li>Getting things done more efficiently</li>
 							<li>Being able to communicate quickly, succinctly and with impact</li>
 							<li>Building confidence</li>
