--- a/wc-dev/about.html
+++ b/wc-dev/about.html
@@ -6,6 +6,7 @@
         <title>Windmill Consulting Ltd - About</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="format-detection" content="telephone=no">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
@@ -56,13 +57,13 @@
 		    	
 		    	<div class="social-icons">
 			    	<span id="header-tel">Tel: 07726 347868</span>
-			    	<a class="social-icon" href="" title="Go to Windmill on Twitter">
+			    	<a class="social-icon" href="https://twitter.com/ZoeWindmill" title="Go to Windmill on Twitter">
 						<svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92.4 92.4"><path d="M46.2 0C20.7 0 0 20.7 0 46.2c0 25.5 20.7 46.2 46.2 46.2 25.5 0 46.2-20.7 46.2-46.2C92.4 20.7 71.7 0 46.2 0zM69.8 47.4c-5.3 21.4-40.8 30.5-57.1 8.3 6.3 6 17.1 6.5 24-0.7 -4 0.6-7-3.4-2-5.5 -4.5 0.5-7-1.9-8-3.9 1.1-1.1 2.2-1.6 4.4-1.8 -4.9-1.2-6.7-3.6-7.3-6.5 1.4-0.3 3.1-0.6 4-0.5 -4.3-2.2-5.8-5.6-5.5-8.2 7.7 2.8 12.6 5.1 16.6 7.3 1.5 0.8 3.1 2.2 4.9 3.9 2.3-6.2 5.2-12.5 10.1-15.7 -0.1 0.7-0.5 1.4-1 1.9 1.4-1.3 3.2-2.1 5.1-2.4C58 25.3 56 26 54.8 26.5c0.9-0.3 5.8-2.5 6.3-1.2 0.6 1.4-3.3 2-4 2.3 -0.5 0.2-1 0.4-1.5 0.6 6.2-0.6 12 4.5 13.7 10.8 0.1 0.5 0.2 1 0.4 1.5 2.3 0.8 6.3 0 7.6-0.8 -1 2.2-3.4 3.9-7.1 4.2 1.8 0.7 5.1 1.1 7.3 0.7C76.1 46 73.8 47.4 69.8 47.4z"/></svg>
 					</a>
-					<a class="social-icon" href="" title="Go to Windmill on Linkedin">
+					<a class="social-icon" href="https://linkedin.com/in/zoe-collier-ma-cantab-904a2713" title="Go to Windmill on Linkedin">
 						<svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92.4 92.4"><path d="M46.2 0C20.7 0 0 20.7 0 46.2c0 25.5 20.7 46.2 46.2 46.2 25.5 0 46.2-20.7 46.2-46.2C92.4 20.7 71.7 0 46.2 0zM35.6 68.7H25.5V38.3h10.1V68.7zM30.5 34.2L30.5 34.2c-3.5 0-5.7-2.3-5.7-5.2 0-3 2.3-5.2 5.7-5.2 3.5 0 5.6 2.3 5.6 5.2C36.2 31.9 34.1 34.2 30.5 34.2zM72 68.7H61.9V52.5c0-4.1-1.5-6.9-5.1-6.9 -2.8 0-4.4 1.9-5.2 3.7 -0.3 0.6-0.3 1.5-0.3 2.5v17H41.2c0 0 0.1-27.5 0-30.4h10.1v4.3c1.3-2.1 3.7-5 9.1-5C67 37.6 72 42 72 51.3V68.7z"/></svg>
 					</a>
-					<a class="social-icon" href="" title="Go to Windmill on Facebook">
+					<a class="social-icon" href="https://www.facebook.com/WindmillConsultingLtd" title="Go to Windmill on Facebook">
 						<svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92.4 92.4"><path d="M46.2-0.6C20.7-0.6 0 20.1 0 45.6c0 25.5 20.7 46.2 46.2 46.2s46.2-20.7 46.2-46.2C92.4 20.1 71.7-0.6 46.2-0.6zM55 30.3c-2.1 0-4.3 0-5.3 0 -1 0-2.1 1.1-2.1 1.9 0 0.8 0 5.4 0 5.4s6.6 0 7.4 0c-0.3 4.2-0.9 7.9-0.9 7.9h-6.5v23.6h-9.8V45.5H33v-7.9h4.7c0 0 0-5.3 0-6.5 0-1.2-0.2-9.1 10-9.1 1.4 0 4.5 0 7.2 0C55 25.5 55 29.2 55 30.3z"/></svg>
 					</a>
 		    	</div>
@@ -71,7 +72,7 @@
 
 		
 		 <div id="main">
-	        <div class="content">
+	        <div class="content inside">
 		        <div class="col-66">
 			        <div class="padding">
 			        	<h1><span>Zoë Collier <span style="font-size: 50%;">MA(Cantab)</span></h1>
@@ -118,13 +119,13 @@
 		        <div class="col-33">
 			        <div class="padding">
 					<div class="social-icons">
-						<a href="" title="Go to Windmill on Twitter">
+						<a href="https://twitter.com/ZoeWindmill" title="Go to Windmill on Twitter">
 							<svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92.4 92.4"><path d="M46.2 0C20.7 0 0 20.7 0 46.2c0 25.5 20.7 46.2 46.2 46.2 25.5 0 46.2-20.7 46.2-46.2C92.4 20.7 71.7 0 46.2 0zM69.8 47.4c-5.3 21.4-40.8 30.5-57.1 8.3 6.3 6 17.1 6.5 24-0.7 -4 0.6-7-3.4-2-5.5 -4.5 0.5-7-1.9-8-3.9 1.1-1.1 2.2-1.6 4.4-1.8 -4.9-1.2-6.7-3.6-7.3-6.5 1.4-0.3 3.1-0.6 4-0.5 -4.3-2.2-5.8-5.6-5.5-8.2 7.7 2.8 12.6 5.1 16.6 7.3 1.5 0.8 3.1 2.2 4.9 3.9 2.3-6.2 5.2-12.5 10.1-15.7 -0.1 0.7-0.5 1.4-1 1.9 1.4-1.3 3.2-2.1 5.1-2.4C58 25.3 56 26 54.8 26.5c0.9-0.3 5.8-2.5 6.3-1.2 0.6 1.4-3.3 2-4 2.3 -0.5 0.2-1 0.4-1.5 0.6 6.2-0.6 12 4.5 13.7 10.8 0.1 0.5 0.2 1 0.4 1.5 2.3 0.8 6.3 0 7.6-0.8 -1 2.2-3.4 3.9-7.1 4.2 1.8 0.7 5.1 1.1 7.3 0.7C76.1 46 73.8 47.4 69.8 47.4z"/></svg>
 						</a>
-						<a href="" title="Go to Windmill on Linkedin">
+						<a href="https://linkedin.com/in/zoe-collier-ma-cantab-904a2713" title="Go to Windmill on Linkedin">
 							<svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92.4 92.4"><path d="M46.2 0C20.7 0 0 20.7 0 46.2c0 25.5 20.7 46.2 46.2 46.2 25.5 0 46.2-20.7 46.2-46.2C92.4 20.7 71.7 0 46.2 0zM35.6 68.7H25.5V38.3h10.1V68.7zM30.5 34.2L30.5 34.2c-3.5 0-5.7-2.3-5.7-5.2 0-3 2.3-5.2 5.7-5.2 3.5 0 5.6 2.3 5.6 5.2C36.2 31.9 34.1 34.2 30.5 34.2zM72 68.7H61.9V52.5c0-4.1-1.5-6.9-5.1-6.9 -2.8 0-4.4 1.9-5.2 3.7 -0.3 0.6-0.3 1.5-0.3 2.5v17H41.2c0 0 0.1-27.5 0-30.4h10.1v4.3c1.3-2.1 3.7-5 9.1-5C67 37.6 72 42 72 51.3V68.7z"/></svg>
 						</a>
-						<a href="" title="Go to Windmill on Facebook">
+						<a href="https://www.facebook.com/WindmillConsultingLtd/" title="Go to Windmill on Facebook">
 							<svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92.4 92.4"><path d="M46.2-0.6C20.7-0.6 0 20.1 0 45.6c0 25.5 20.7 46.2 46.2 46.2s46.2-20.7 46.2-46.2C92.4 20.1 71.7-0.6 46.2-0.6zM55 30.3c-2.1 0-4.3 0-5.3 0 -1 0-2.1 1.1-2.1 1.9 0 0.8 0 5.4 0 5.4s6.6 0 7.4 0c-0.3 4.2-0.9 7.9-0.9 7.9h-6.5v23.6h-9.8V45.5H33v-7.9h4.7c0 0 0-5.3 0-6.5 0-1.2-0.2-9.1 10-9.1 1.4 0 4.5 0 7.2 0C55 25.5 55 29.2 55 30.3z"/></svg>
 						</a>
 			    	</div>
