--- a/wc-dev/index.html
+++ b/wc-dev/index.html
@@ -6,6 +6,7 @@
         <title>Windmill Consulting Ltd - Home</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="format-detection" content="telephone=no">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
@@ -56,13 +57,13 @@
 		    	
 		    	<div class="social-icons">
 			    	<span id="header-tel">Tel: 07726 347868</span>
-			    	<a class="social-icon" href="" title="Go to Windmill on Twitter">
+			    	<a class="social-icon" href="https://twitter.com/ZoeWindmill" title="Go to Windmill on Twitter">
 						<svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92.4 92.4"><path d="M46.2 0C20.7 0 0 20.7 0 46.2c0 25.5 20.7 46.2 46.2 46.2 25.5 0 46.2-20.7 46.2-46.2C92.4 20.7 71.7 0 46.2 0zM69.8 47.4c-5.3 21.4-40.8 30.5-57.1 8.3 6.3 6 17.1 6.5 24-0.7 -4 0.6-7-3.4-2-5.5 -4.5 0.5-7-1.9-8-3.9 1.1-1.1 2.2-1.6 4.4-1.8 -4.9-1.2-6.7-3.6-7.3-6.5 1.4-0.3 3.1-0.6 4-0.5 -4.3-2.2-5.8-5.6-5.5-8.2 7.7 2.8 12.6 5.1 16.6 7.3 1.5 0.8 3.1 2.2 4.9 3.9 2.3-6.2 5.2-12.5 10.1-15.7 -0.1 0.7-0.5 1.4-1 1.9 1.4-1.3 3.2-2.1 5.1-2.4C58 25.3 56 26 54.8 26.5c0.9-0.3 5.8-2.5 6.3-1.2 0.6 1.4-3.3 2-4 2.3 -0.5 0.2-1 0.4-1.5 0.6 6.2-0.6 12 4.5 13.7 10.8 0.1 0.5 0.2 1 0.4 1.5 2.3 0.8 6.3 0 7.6-0.8 -1 2.2-3.4 3.9-7.1 4.2 1.8 0.7 5.1 1.1 7.3 0.7C76.1 46 73.8 47.4 69.8 47.4z"/></svg>
 					</a>
-					<a class="social-icon" href="" title="Go to Windmill on Linkedin">
+					<a class="social-icon" href="https://linkedin.com/in/zoe-collier-ma-cantab-904a2713" title="Go to Windmill on Linkedin">
 						<svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92.4 92.4"><path d="M46.2 0C20.7 0 0 20.7 0 46.2c0 25.5 20.7 46.2 46.2 46.2 25.5 0 46.2-20.7 46.2-46.2C92.4 20.7 71.7 0 46.2 0zM35.6 68.7H25.5V38.3h10.1V68.7zM30.5 34.2L30.5 34.2c-3.5 0-5.7-2.3-5.7-5.2 0-3 2.3-5.2 5.7-5.2 3.5 0 5.6 2.3 5.6 5.2C36.2 31.9 34.1 34.2 30.5 34.2zM72 68.7H61.9V52.5c0-4.1-1.5-6.9-5.1-6.9 -2.8 0-4.4 1.9-5.2 3.7 -0.3 0.6-0.3 1.5-0.3 2.5v17H41.2c0 0 0.1-27.5 0-30.4h10.1v4.3c1.3-2.1 3.7-5 9.1-5C67 37.6 72 42 72 51.3V68.7z"/></svg>
 					</a>
-					<a class="social-icon" href="" title="Go to Windmill on Facebook">
+					<a class="social-icon" href="https://www.facebook.com/WindmillConsultingLtd" title="Go to Windmill on Facebook">
 						<svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92.4 92.4"><path d="M46.2-0.6C20.7-0.6 0 20.1 0 45.6c0 25.5 20.7 46.2 46.2 46.2s46.2-20.7 46.2-46.2C92.4 20.1 71.7-0.6 46.2-0.6zM55 30.3c-2.1 0-4.3 0-5.3 0 -1 0-2.1 1.1-2.1 1.9 0 0.8 0 5.4 0 5.4s6.6 0 7.4 0c-0.3 4.2-0.9 7.9-0.9 7.9h-6.5v23.6h-9.8V45.5H33v-7.9h4.7c0 0 0-5.3 0-6.5 0-1.2-0.2-9.1 10-9.1 1.4 0 4.5 0 7.2 0C55 25.5 55 29.2 55 30.3z"/></svg>
 					</a>
 		    	</div>
@@ -123,10 +124,10 @@
 		        <div class="col-33">
 			        <div class="padding">
 				        <div class="windmill-sail-container">
-					        <a href="strategy.html"><svg class="windmill-sail-orange" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 117.2 116.7"><path class="st0" d="M72.4 90c0 0-0.1 0-0.2 0.1 -1.4 0.6-9 4.3-10.1 13.3 -0.9 7.7 3.5 12.7 3.5 12.7s-14.5-3.8-18.8-16.8c-1-3-1.3-6-1.1-8.8 0 0 0-0.1 0-0.1 0.7-9.2 6.5-16.9 9.2-20.1 -0.5 0.8-5.3 8.7-3.1 16.8 2.4 8.6 7.3 10.5 7.3 10.5s1.8-2.7 5.1-4.9c2.9-1.9 6.9-2.5 7.9-2.6C72.3 90 72.4 90 72.4 90"/><path class="st0" d="M71.6 26.2C71.6 26.2 71.6 26.2 71.6 26.2c-0.7 9.3-6.5 16.9-9.2 20.2 0.5-0.8 5.3-8.7 3.1-16.8C63.1 20.9 58.2 19 58.2 19s-1.7 2.8-5.1 4.9c-2.9 1.8-6.8 2.5-7.9 2.6 -0.2 0-0.3 0-0.3 0s0.1 0 0.2-0.1c1.4-0.6 9-4.4 10.1-13.3 1-7.7-3.5-12.7-3.5-12.7s14.5 3.8 18.8 16.8C71.5 20.4 71.8 23.3 71.6 26.2"/><path class="st0" d="M104.5 94.2c0 0-12.9 7.6-25.2 1.4 -2.9-1.4-5.2-3.3-7-5.5 0 0 0 0 0-0.1 -6.1-7-7.3-16.7-7.7-20.8 0 0 2 9.8 9.7 14.2 7.8 4.4 12.6 2.2 12.6 2.2s-0.7-3.2 0.1-7.1c0.7-3.3 3.1-6.6 3.8-7.5 0.1-0.1 0.1-0.1 0.1-0.2 0 0 0 0.1-0.1 0.2 -0.6 1.4-3.3 9.4 2.2 16.5C97.8 93.8 104.5 94.2 104.5 94.2"/><path class="st0" d="M52.9 47.3c0 0-2-9.8-9.7-14.2 -7.8-4.4-12.6-2.2-12.6-2.2s0.7 3.2-0.1 7.1c-0.7 3.3-3.1 6.6-3.8 7.5 -0.1 0.1-0.1 0.1-0.1 0.2 0 0 0-0.1 0-0.2 0.6-1.4 3.3-9.4-2.3-16.5 -4.7-6.1-11.5-6.5-11.5-6.5S25.7 14.8 38 21c2.9 1.4 5.2 3.3 7 5.5 0 0 0.1 0.1 0.1 0.1C51.2 33.6 52.5 43.2 52.9 47.3"/><path class="st0" d="M116.5 51.3c0 0-3.8 14.5-16.8 18.8 -3 1-6 1.3-8.8 1.1 0 0 0 0-0.1 0 -9.2-0.7-16.9-6.5-20.1-9.2 0.8 0.5 8.7 5.3 16.8 3.1 8.6-2.4 10.5-7.3 10.5-7.3S95.2 56 93 52.7c-1.9-2.9-2.5-6.9-2.6-7.9 0-0.2 0-0.3 0-0.3s0 0.1 0.1 0.2c0.6 1.4 4.3 9 13.3 10.1C111.4 55.7 116.5 51.3 116.5 51.3"/><path class="st0" d="M46.7 54.6c-0.8-0.5-8.7-5.3-16.8-3.1 -8.6 2.4-10.5 7.3-10.5 7.3s2.7 1.8 4.9 5.1c1.9 2.9 2.5 6.9 2.6 7.9 0 0.1 0 0.2 0 0.2 0 0 0-0.1-0.1-0.2 -0.6-1.4-4.4-9-13.3-10.1 -7.7-0.9-12.7 3.5-12.7 3.5s3.8-14.5 16.8-18.8c3-1 6-1.3 8.9-1.1 0 0 0.1 0 0.1 0C35.8 46.1 43.5 51.9 46.7 54.6"/><path class="st0" d="M96 37.7c-1.4 2.9-3.3 5.2-5.5 7 0 0 0 0-0.1 0 -7.1 6.1-16.7 7.3-20.8 7.7 0 0 9.8-2 14.2-9.7 4.4-7.8 2.2-12.6 2.2-12.6S82.9 30.9 79 30c-3.3-0.7-6.6-3.1-7.5-3.8 -0.1 0-0.1-0.1-0.2-0.1 0 0 0.1 0 0.2 0 1.4 0.6 9.4 3.3 16.5-2.3 6.1-4.7 6.5-11.5 6.5-11.5S102.1 25.4 96 37.7"/><path class="st0" d="M45.8 90.3c0.1 0.1 0.1 0.1 0.2 0.2C45.9 90.5 45.8 90.4 45.8 90.3c-1.5-0.5-9.4-3.2-16.5 2.3 -6.1 4.7-6.5 11.5-6.5 11.5s-7.6-12.9-1.4-25.2c1.4-2.9 3.3-5.2 5.5-7.1 0 0 0 0 0.1 0 7-6.1 16.7-7.3 20.8-7.7 0 0-9.8 2-14.2 9.7 -4.4 7.8-2.2 12.6-2.2 12.6s3.2-0.7 7.1 0.1C41.6 87.3 44.9 89.7 45.8 90.3"/></svg></a>
+					        <svg class="windmill-sail-orange" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 117.2 116.7"><path class="st0" d="M72.4 90c0 0-0.1 0-0.2 0.1 -1.4 0.6-9 4.3-10.1 13.3 -0.9 7.7 3.5 12.7 3.5 12.7s-14.5-3.8-18.8-16.8c-1-3-1.3-6-1.1-8.8 0 0 0-0.1 0-0.1 0.7-9.2 6.5-16.9 9.2-20.1 -0.5 0.8-5.3 8.7-3.1 16.8 2.4 8.6 7.3 10.5 7.3 10.5s1.8-2.7 5.1-4.9c2.9-1.9 6.9-2.5 7.9-2.6C72.3 90 72.4 90 72.4 90"/><path class="st0" d="M71.6 26.2C71.6 26.2 71.6 26.2 71.6 26.2c-0.7 9.3-6.5 16.9-9.2 20.2 0.5-0.8 5.3-8.7 3.1-16.8C63.1 20.9 58.2 19 58.2 19s-1.7 2.8-5.1 4.9c-2.9 1.8-6.8 2.5-7.9 2.6 -0.2 0-0.3 0-0.3 0s0.1 0 0.2-0.1c1.4-0.6 9-4.4 10.1-13.3 1-7.7-3.5-12.7-3.5-12.7s14.5 3.8 18.8 16.8C71.5 20.4 71.8 23.3 71.6 26.2"/><path class="st0" d="M104.5 94.2c0 0-12.9 7.6-25.2 1.4 -2.9-1.4-5.2-3.3-7-5.5 0 0 0 0 0-0.1 -6.1-7-7.3-16.7-7.7-20.8 0 0 2 9.8 9.7 14.2 7.8 4.4 12.6 2.2 12.6 2.2s-0.7-3.2 0.1-7.1c0.7-3.3 3.1-6.6 3.8-7.5 0.1-0.1 0.1-0.1 0.1-0.2 0 0 0 0.1-0.1 0.2 -0.6 1.4-3.3 9.4 2.2 16.5C97.8 93.8 104.5 94.2 104.5 94.2"/><path class="st0" d="M52.9 47.3c0 0-2-9.8-9.7-14.2 -7.8-4.4-12.6-2.2-12.6-2.2s0.7 3.2-0.1 7.1c-0.7 3.3-3.1 6.6-3.8 7.5 -0.1 0.1-0.1 0.1-0.1 0.2 0 0 0-0.1 0-0.2 0.6-1.4 3.3-9.4-2.3-16.5 -4.7-6.1-11.5-6.5-11.5-6.5S25.7 14.8 38 21c2.9 1.4 5.2 3.3 7 5.5 0 0 0.1 0.1 0.1 0.1C51.2 33.6 52.5 43.2 52.9 47.3"/><path class="st0" d="M116.5 51.3c0 0-3.8 14.5-16.8 18.8 -3 1-6 1.3-8.8 1.1 0 0 0 0-0.1 0 -9.2-0.7-16.9-6.5-20.1-9.2 0.8 0.5 8.7 5.3 16.8 3.1 8.6-2.4 10.5-7.3 10.5-7.3S95.2 56 93 52.7c-1.9-2.9-2.5-6.9-2.6-7.9 0-0.2 0-0.3 0-0.3s0 0.1 0.1 0.2c0.6 1.4 4.3 9 13.3 10.1C111.4 55.7 116.5 51.3 116.5 51.3"/><path class="st0" d="M46.7 54.6c-0.8-0.5-8.7-5.3-16.8-3.1 -8.6 2.4-10.5 7.3-10.5 7.3s2.7 1.8 4.9 5.1c1.9 2.9 2.5 6.9 2.6 7.9 0 0.1 0 0.2 0 0.2 0 0 0-0.1-0.1-0.2 -0.6-1.4-4.4-9-13.3-10.1 -7.7-0.9-12.7 3.5-12.7 3.5s3.8-14.5 16.8-18.8c3-1 6-1.3 8.9-1.1 0 0 0.1 0 0.1 0C35.8 46.1 43.5 51.9 46.7 54.6"/><path class="st0" d="M96 37.7c-1.4 2.9-3.3 5.2-5.5 7 0 0 0 0-0.1 0 -7.1 6.1-16.7 7.3-20.8 7.7 0 0 9.8-2 14.2-9.7 4.4-7.8 2.2-12.6 2.2-12.6S82.9 30.9 79 30c-3.3-0.7-6.6-3.1-7.5-3.8 -0.1 0-0.1-0.1-0.2-0.1 0 0 0.1 0 0.2 0 1.4 0.6 9.4 3.3 16.5-2.3 6.1-4.7 6.5-11.5 6.5-11.5S102.1 25.4 96 37.7"/><path class="st0" d="M45.8 90.3c0.1 0.1 0.1 0.1 0.2 0.2C45.9 90.5 45.8 90.4 45.8 90.3c-1.5-0.5-9.4-3.2-16.5 2.3 -6.1 4.7-6.5 11.5-6.5 11.5s-7.6-12.9-1.4-25.2c1.4-2.9 3.3-5.2 5.5-7.1 0 0 0 0 0.1 0 7-6.1 16.7-7.3 20.8-7.7 0 0-9.8 2-14.2 9.7 -4.4 7.8-2.2 12.6-2.2 12.6s3.2-0.7 7.1 0.1C41.6 87.3 44.9 89.7 45.8 90.3"/></svg>
 				        </div>
-						<h2><a href="strategy.html">Policy and strategic planning</a></h2>
-			        	<p><a href="strategy.html">Need help with strategic planning, policy development, decision making or stakeholder engagement? <br><strong>&raquo;</strong></a></p>
+						<h2>Policy and strategic planning</h2>
+			        	<p><a href="strategy.html">Need help with strategic planning, policy development, decision making or stakeholder engagement? <strong>&raquo;</strong></a></p>
 			        </div>
 		        </div>
 		        <div class="col-33">
@@ -134,8 +135,8 @@
 				        <div class="windmill-sail-container">
 					        <svg class="windmill-sail-green" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 117.2 116.7"><path class="st0" d="M72.4 90c0 0-0.1 0-0.2 0.1 -1.4 0.6-9 4.3-10.1 13.3 -0.9 7.7 3.5 12.7 3.5 12.7s-14.5-3.8-18.8-16.8c-1-3-1.3-6-1.1-8.8 0 0 0-0.1 0-0.1 0.7-9.2 6.5-16.9 9.2-20.1 -0.5 0.8-5.3 8.7-3.1 16.8 2.4 8.6 7.3 10.5 7.3 10.5s1.8-2.7 5.1-4.9c2.9-1.9 6.9-2.5 7.9-2.6C72.3 90 72.4 90 72.4 90"/><path class="st0" d="M71.6 26.2C71.6 26.2 71.6 26.2 71.6 26.2c-0.7 9.3-6.5 16.9-9.2 20.2 0.5-0.8 5.3-8.7 3.1-16.8C63.1 20.9 58.2 19 58.2 19s-1.7 2.8-5.1 4.9c-2.9 1.8-6.8 2.5-7.9 2.6 -0.2 0-0.3 0-0.3 0s0.1 0 0.2-0.1c1.4-0.6 9-4.4 10.1-13.3 1-7.7-3.5-12.7-3.5-12.7s14.5 3.8 18.8 16.8C71.5 20.4 71.8 23.3 71.6 26.2"/><path class="st0" d="M104.5 94.2c0 0-12.9 7.6-25.2 1.4 -2.9-1.4-5.2-3.3-7-5.5 0 0 0 0 0-0.1 -6.1-7-7.3-16.7-7.7-20.8 0 0 2 9.8 9.7 14.2 7.8 4.4 12.6 2.2 12.6 2.2s-0.7-3.2 0.1-7.1c0.7-3.3 3.1-6.6 3.8-7.5 0.1-0.1 0.1-0.1 0.1-0.2 0 0 0 0.1-0.1 0.2 -0.6 1.4-3.3 9.4 2.2 16.5C97.8 93.8 104.5 94.2 104.5 94.2"/><path class="st0" d="M52.9 47.3c0 0-2-9.8-9.7-14.2 -7.8-4.4-12.6-2.2-12.6-2.2s0.7 3.2-0.1 7.1c-0.7 3.3-3.1 6.6-3.8 7.5 -0.1 0.1-0.1 0.1-0.1 0.2 0 0 0-0.1 0-0.2 0.6-1.4 3.3-9.4-2.3-16.5 -4.7-6.1-11.5-6.5-11.5-6.5S25.7 14.8 38 21c2.9 1.4 5.2 3.3 7 5.5 0 0 0.1 0.1 0.1 0.1C51.2 33.6 52.5 43.2 52.9 47.3"/><path class="st0" d="M116.5 51.3c0 0-3.8 14.5-16.8 18.8 -3 1-6 1.3-8.8 1.1 0 0 0 0-0.1 0 -9.2-0.7-16.9-6.5-20.1-9.2 0.8 0.5 8.7 5.3 16.8 3.1 8.6-2.4 10.5-7.3 10.5-7.3S95.2 56 93 52.7c-1.9-2.9-2.5-6.9-2.6-7.9 0-0.2 0-0.3 0-0.3s0 0.1 0.1 0.2c0.6 1.4 4.3 9 13.3 10.1C111.4 55.7 116.5 51.3 116.5 51.3"/><path class="st0" d="M46.7 54.6c-0.8-0.5-8.7-5.3-16.8-3.1 -8.6 2.4-10.5 7.3-10.5 7.3s2.7 1.8 4.9 5.1c1.9 2.9 2.5 6.9 2.6 7.9 0 0.1 0 0.2 0 0.2 0 0 0-0.1-0.1-0.2 -0.6-1.4-4.4-9-13.3-10.1 -7.7-0.9-12.7 3.5-12.7 3.5s3.8-14.5 16.8-18.8c3-1 6-1.3 8.9-1.1 0 0 0.1 0 0.1 0C35.8 46.1 43.5 51.9 46.7 54.6"/><path class="st0" d="M96 37.7c-1.4 2.9-3.3 5.2-5.5 7 0 0 0 0-0.1 0 -7.1 6.1-16.7 7.3-20.8 7.7 0 0 9.8-2 14.2-9.7 4.4-7.8 2.2-12.6 2.2-12.6S82.9 30.9 79 30c-3.3-0.7-6.6-3.1-7.5-3.8 -0.1 0-0.1-0.1-0.2-0.1 0 0 0.1 0 0.2 0 1.4 0.6 9.4 3.3 16.5-2.3 6.1-4.7 6.5-11.5 6.5-11.5S102.1 25.4 96 37.7"/><path class="st0" d="M45.8 90.3c0.1 0.1 0.1 0.1 0.2 0.2C45.9 90.5 45.8 90.4 45.8 90.3c-1.5-0.5-9.4-3.2-16.5 2.3 -6.1 4.7-6.5 11.5-6.5 11.5s-7.6-12.9-1.4-25.2c1.4-2.9 3.3-5.2 5.5-7.1 0 0 0 0 0.1 0 7-6.1 16.7-7.3 20.8-7.7 0 0-9.8 2-14.2 9.7 -4.4 7.8-2.2 12.6-2.2 12.6s3.2-0.7 7.1 0.1C41.6 87.3 44.9 89.7 45.8 90.3"/></svg>
 				        </div>
-			        	<h2><a href="communication.html">Communication skills</a></h2>
-			        	<p><a href="communication.html">Communicate quickly and succinctly with impact: report-writing, board papers, briefing, minutes of meetings and presentations.<br><strong>&raquo;</strong></a></p>
+			        	<h2>Communication skills</h2>
+			        	<p><a href="communication.html">Communicate quickly and succinctly with impact: report-writing, board papers, briefing, minutes of meetings and presentations <strong>&raquo;</strong></a></p>
 			        </div>
 		        </div>
 		        <div class="col-33">
@@ -143,16 +144,16 @@
 				        <div class="windmill-sail-container">
 					        <svg class="windmill-sail-turquoise" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 117.2 116.7"><path class="st0" d="M72.4 90c0 0-0.1 0-0.2 0.1 -1.4 0.6-9 4.3-10.1 13.3 -0.9 7.7 3.5 12.7 3.5 12.7s-14.5-3.8-18.8-16.8c-1-3-1.3-6-1.1-8.8 0 0 0-0.1 0-0.1 0.7-9.2 6.5-16.9 9.2-20.1 -0.5 0.8-5.3 8.7-3.1 16.8 2.4 8.6 7.3 10.5 7.3 10.5s1.8-2.7 5.1-4.9c2.9-1.9 6.9-2.5 7.9-2.6C72.3 90 72.4 90 72.4 90"/><path class="st0" d="M71.6 26.2C71.6 26.2 71.6 26.2 71.6 26.2c-0.7 9.3-6.5 16.9-9.2 20.2 0.5-0.8 5.3-8.7 3.1-16.8C63.1 20.9 58.2 19 58.2 19s-1.7 2.8-5.1 4.9c-2.9 1.8-6.8 2.5-7.9 2.6 -0.2 0-0.3 0-0.3 0s0.1 0 0.2-0.1c1.4-0.6 9-4.4 10.1-13.3 1-7.7-3.5-12.7-3.5-12.7s14.5 3.8 18.8 16.8C71.5 20.4 71.8 23.3 71.6 26.2"/><path class="st0" d="M104.5 94.2c0 0-12.9 7.6-25.2 1.4 -2.9-1.4-5.2-3.3-7-5.5 0 0 0 0 0-0.1 -6.1-7-7.3-16.7-7.7-20.8 0 0 2 9.8 9.7 14.2 7.8 4.4 12.6 2.2 12.6 2.2s-0.7-3.2 0.1-7.1c0.7-3.3 3.1-6.6 3.8-7.5 0.1-0.1 0.1-0.1 0.1-0.2 0 0 0 0.1-0.1 0.2 -0.6 1.4-3.3 9.4 2.2 16.5C97.8 93.8 104.5 94.2 104.5 94.2"/><path class="st0" d="M52.9 47.3c0 0-2-9.8-9.7-14.2 -7.8-4.4-12.6-2.2-12.6-2.2s0.7 3.2-0.1 7.1c-0.7 3.3-3.1 6.6-3.8 7.5 -0.1 0.1-0.1 0.1-0.1 0.2 0 0 0-0.1 0-0.2 0.6-1.4 3.3-9.4-2.3-16.5 -4.7-6.1-11.5-6.5-11.5-6.5S25.7 14.8 38 21c2.9 1.4 5.2 3.3 7 5.5 0 0 0.1 0.1 0.1 0.1C51.2 33.6 52.5 43.2 52.9 47.3"/><path class="st0" d="M116.5 51.3c0 0-3.8 14.5-16.8 18.8 -3 1-6 1.3-8.8 1.1 0 0 0 0-0.1 0 -9.2-0.7-16.9-6.5-20.1-9.2 0.8 0.5 8.7 5.3 16.8 3.1 8.6-2.4 10.5-7.3 10.5-7.3S95.2 56 93 52.7c-1.9-2.9-2.5-6.9-2.6-7.9 0-0.2 0-0.3 0-0.3s0 0.1 0.1 0.2c0.6 1.4 4.3 9 13.3 10.1C111.4 55.7 116.5 51.3 116.5 51.3"/><path class="st0" d="M46.7 54.6c-0.8-0.5-8.7-5.3-16.8-3.1 -8.6 2.4-10.5 7.3-10.5 7.3s2.7 1.8 4.9 5.1c1.9 2.9 2.5 6.9 2.6 7.9 0 0.1 0 0.2 0 0.2 0 0 0-0.1-0.1-0.2 -0.6-1.4-4.4-9-13.3-10.1 -7.7-0.9-12.7 3.5-12.7 3.5s3.8-14.5 16.8-18.8c3-1 6-1.3 8.9-1.1 0 0 0.1 0 0.1 0C35.8 46.1 43.5 51.9 46.7 54.6"/><path class="st0" d="M96 37.7c-1.4 2.9-3.3 5.2-5.5 7 0 0 0 0-0.1 0 -7.1 6.1-16.7 7.3-20.8 7.7 0 0 9.8-2 14.2-9.7 4.4-7.8 2.2-12.6 2.2-12.6S82.9 30.9 79 30c-3.3-0.7-6.6-3.1-7.5-3.8 -0.1 0-0.1-0.1-0.2-0.1 0 0 0.1 0 0.2 0 1.4 0.6 9.4 3.3 16.5-2.3 6.1-4.7 6.5-11.5 6.5-11.5S102.1 25.4 96 37.7"/><path class="st0" d="M45.8 90.3c0.1 0.1 0.1 0.1 0.2 0.2C45.9 90.5 45.8 90.4 45.8 90.3c-1.5-0.5-9.4-3.2-16.5 2.3 -6.1 4.7-6.5 11.5-6.5 11.5s-7.6-12.9-1.4-25.2c1.4-2.9 3.3-5.2 5.5-7.1 0 0 0 0 0.1 0 7-6.1 16.7-7.3 20.8-7.7 0 0-9.8 2-14.2 9.7 -4.4 7.8-2.2 12.6-2.2 12.6s3.2-0.7 7.1 0.1C41.6 87.3 44.9 89.7 45.8 90.3"/></svg>
 				        </div>
-			        	<h2><a href="consultancy.html">Consultancy and Coaching</a></h2>
-			        	<p><a href="consultancy.html">Support, advice and coaching for organisations and individuals.<br><strong>&raquo;</strong></a></p>
+			        	<h2>Consultancy and Coaching</h2>
+			        	<p><a href="consultancy.html">Support, advice and coaching for organisations and individuals <strong>&raquo;</strong></a></p>
 			        </div>
 		        </div>
 		    </div>
 		    <div class="content">
 		        <div class="col-33 copy-background">
 			        <div class="padding">
-				        <h2 class="ul-in-line">The benefits</h2>
-				        <ul class="ul-in-line">
+				        <h2>The benefits</h2>
+				        <ul>
 					        <li>Improved strategic planning</li>
 							<li>Better-quality decision making and problem solving</li>
 							<li>Getting things done more efficiently</li>
@@ -161,25 +162,29 @@
 						</ul>
 			        </div>
 		        </div>
+		        <div class="col-66">
+			        <div class="padding-top-sides mobile-40px-top-padding">
+			        	<h2>Some of those I’ve helped</h2>
+			        </div>
+			    </div>
 		        <div class="col-33">
-			        <div class="padding">
-				        <h2 class="ul-in-line">Some of those I’ve helped</h2>
-				        <ul class="client ul-in-line">
+			        <div class="padding-sides-bottom">
+				        <ul class="client">
 					        <li>The Council of the European Union</li>
 							<li>The European Space Agency</li>
-							<li>Association of Chartered and Certified Accountants (ACCA)</li>
 							<li>Air Safety Support International</li>  
-							<li>Foreign and Commonwealth Office</li>  
+							<li>Foreign and Commonwealth Office</li>
 							<li>The Royal Society</li>
+					        <li>Association of Chartered and Certified Accountants (ACCA)</li>
 						</ul>
 			        </div>
 		        </div>
 		        <div class="col-33">
-			        <div class="padding">
-				        <ul class="client client-2nd-col ul-in-line">
+			        <div class="padding-sides-bottom">
+				        <ul class="client client-2nd-col">
+					        <li>Kings College London</li> 
 					        <li>Former Yugoslav Republic of Macedonia</li>
-					        <li>Kings College London</li>
-							<li>Avon and Somerset Police</li>
+					        <li>Avon and Somerset Police</li>
 							<li>Sheffield Fire and Rescue Service</li>
 							<li>University of Essex</li>
 							<li>Government of Uganda</li>
@@ -203,13 +208,13 @@
 		        <div class="col-33">
 			        <div class="padding">
 					<div class="social-icons">
-						<a href="" title="Go to Windmill on Twitter">
+						<a href="https://twitter.com/ZoeWindmill" title="Go to Windmill on Twitter">
 							<svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92.4 92.4"><path d="M46.2 0C20.7 0 0 20.7 0 46.2c0 25.5 20.7 46.2 46.2 46.2 25.5 0 46.2-20.7 46.2-46.2C92.4 20.7 71.7 0 46.2 0zM69.8 47.4c-5.3 21.4-40.8 30.5-57.1 8.3 6.3 6 17.1 6.5 24-0.7 -4 0.6-7-3.4-2-5.5 -4.5 0.5-7-1.9-8-3.9 1.1-1.1 2.2-1.6 4.4-1.8 -4.9-1.2-6.7-3.6-7.3-6.5 1.4-0.3 3.1-0.6 4-0.5 -4.3-2.2-5.8-5.6-5.5-8.2 7.7 2.8 12.6 5.1 16.6 7.3 1.5 0.8 3.1 2.2 4.9 3.9 2.3-6.2 5.2-12.5 10.1-15.7 -0.1 0.7-0.5 1.4-1 1.9 1.4-1.3 3.2-2.1 5.1-2.4C58 25.3 56 26 54.8 26.5c0.9-0.3 5.8-2.5 6.3-1.2 0.6 1.4-3.3 2-4 2.3 -0.5 0.2-1 0.4-1.5 0.6 6.2-0.6 12 4.5 13.7 10.8 0.1 0.5 0.2 1 0.4 1.5 2.3 0.8 6.3 0 7.6-0.8 -1 2.2-3.4 3.9-7.1 4.2 1.8 0.7 5.1 1.1 7.3 0.7C76.1 46 73.8 47.4 69.8 47.4z"/></svg>
 						</a>
-						<a href="" title="Go to Windmill on Linkedin">
+						<a href="https://linkedin.com/in/zoe-collier-ma-cantab-904a2713" title="Go to Windmill on Linkedin">
 							<svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92.4 92.4"><path d="M46.2 0C20.7 0 0 20.7 0 46.2c0 25.5 20.7 46.2 46.2 46.2 25.5 0 46.2-20.7 46.2-46.2C92.4 20.7 71.7 0 46.2 0zM35.6 68.7H25.5V38.3h10.1V68.7zM30.5 34.2L30.5 34.2c-3.5 0-5.7-2.3-5.7-5.2 0-3 2.3-5.2 5.7-5.2 3.5 0 5.6 2.3 5.6 5.2C36.2 31.9 34.1 34.2 30.5 34.2zM72 68.7H61.9V52.5c0-4.1-1.5-6.9-5.1-6.9 -2.8 0-4.4 1.9-5.2 3.7 -0.3 0.6-0.3 1.5-0.3 2.5v17H41.2c0 0 0.1-27.5 0-30.4h10.1v4.3c1.3-2.1 3.7-5 9.1-5C67 37.6 72 42 72 51.3V68.7z"/></svg>
 						</a>
-						<a href="" title="Go to Windmill on Facebook">
+						<a href="https://www.facebook.com/WindmillConsultingLtd/" title="Go to Windmill on Facebook">
 							<svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92.4 92.4"><path d="M46.2-0.6C20.7-0.6 0 20.1 0 45.6c0 25.5 20.7 46.2 46.2 46.2s46.2-20.7 46.2-46.2C92.4 20.1 71.7-0.6 46.2-0.6zM55 30.3c-2.1 0-4.3 0-5.3 0 -1 0-2.1 1.1-2.1 1.9 0 0.8 0 5.4 0 5.4s6.6 0 7.4 0c-0.3 4.2-0.9 7.9-0.9 7.9h-6.5v23.6h-9.8V45.5H33v-7.9h4.7c0 0 0-5.3 0-6.5 0-1.2-0.2-9.1 10-9.1 1.4 0 4.5 0 7.2 0C55 25.5 55 29.2 55 30.3z"/></svg>
 						</a>
 			    	</div>
