--- a/momiji/index-en.html
+++ b/momiji/index-en.html
@@ -30,7 +30,7 @@
 			
 			if (languageOveride != 'english') {
 				if (language.indexOf('ja') > -1) {
-					document.location.href = "/index.html";
+					document.location.href = "index.html";
 				}
 			}
 		</script>
