--- a/momiji/index.html
+++ b/momiji/index.html
@@ -30,7 +30,7 @@
 			
 			if (languageOveride != 'japanese') {
 				if (language.indexOf('en') > -1) {
-					document.location.href = "/index-en.html";
+					document.location.href = "index-en.html";
 				}
 			}
 		</script>
