--- a/momiji/index-en.html
+++ b/momiji/index-en.html
@@ -94,7 +94,7 @@
 			</div>
 			<div id="hero-copy">
 				<div class="padding-sides">
-					<h1>Set in pristine woodland only 150 meters from the slopes, Momiji offers an intimate atmosphere of tranquility and warmth, with hearty and healthy food prepared from fresh local produce.</h1>
+					<h1>A warm and cosy ski-in and ski-out boutique lodge adjoining the Hakuba Norikura-Cortina resorts</h1>
 					 
 				</div>
 				
@@ -680,13 +680,13 @@ JAPAN</li>
         <script src="js/main.js"></script>
         <script src="js/vendor/detect_swipe.min.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
+    	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-2834493-18"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		  gtag('config', 'UA-2834493-18');
+		</script>
         <!--<div id="lightbox-bg"></div>
         <div id="lightbox">
 	        <div id="lightbox-content">
