--- a/momiji/index.html
+++ b/momiji/index.html
@@ -670,13 +670,13 @@
         <script src="js/main.js"></script>
         <script src="js/vendor/detect_swipe.min.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-2834493-18"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		  gtag('config', 'UA-2834493-18');
+		</script>
         <!--<div id="lightbox-bg"></div>
         <div id="lightbox">
 	        <div id="lightbox-content">
