--- a/momiji/index.html
+++ b/momiji/index.html
@@ -100,7 +100,7 @@
 			</div>
 		</section>
 		
-		<section class="gallery-main section">
+		<section id="gallery" class="gallery-main section">
 			<div class="gallery-wrapper">
 				<div class="padding-sides">
 					<div class="gallery-inner cycle-slideshow" data-cycle-slides="> div" data-cycle-fx=scrollHorz data-cycle-timeout=0 data-cycle-pager=".gallery-set-pager">
